[gd_scene load_steps=23 format=3 uid="uid://t2axld1a34ek"]

[ext_resource type="Script" path="res://game/units/magic_turret_unit.gd" id="1_kctuw"]
[ext_resource type="Texture2D" uid="uid://f5pm2ecxsodr" path="res://assets/wizard-Sheet.png" id="2_m5fja"]
[ext_resource type="Texture2D" uid="uid://bsrdfibgcir5y" path="res://assets/light_01.png" id="3_my2gs"]
[ext_resource type="AudioStream" uid="uid://dhebt0u3a71fp" path="res://assets/sfx/WizardSound1.mp3" id="4_0gq88"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iqw3i"]
atlas = ExtResource("2_m5fja")
region = Rect2(0, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_llsaa"]
atlas = ExtResource("2_m5fja")
region = Rect2(0, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocwd2"]
atlas = ExtResource("2_m5fja")
region = Rect2(128, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lsxe"]
atlas = ExtResource("2_m5fja")
region = Rect2(256, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fxgj"]
atlas = ExtResource("2_m5fja")
region = Rect2(384, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsps6"]
atlas = ExtResource("2_m5fja")
region = Rect2(512, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyxop"]
atlas = ExtResource("2_m5fja")
region = Rect2(640, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3o1x"]
atlas = ExtResource("2_m5fja")
region = Rect2(768, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmkos"]
atlas = ExtResource("2_m5fja")
region = Rect2(896, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dutvd"]
atlas = ExtResource("2_m5fja")
region = Rect2(1024, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcbrn"]
atlas = ExtResource("2_m5fja")
region = Rect2(1152, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa0l1"]
atlas = ExtResource("2_m5fja")
region = Rect2(0, 0, 128, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_i0b81"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llsaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocwd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lsxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fxgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsps6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyxop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3o1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmkos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dutvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcbrn")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa0l1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7bquo"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6hkwm"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gmgm6"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f5okr"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1xknk"]
radius = 9.0

[node name="MagicTurretUnit" type="Node2D"]
script = ExtResource("1_kctuw")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -8)
scale = Vector2(0.125, 0.125)
texture = SubResource("AtlasTexture_iqw3i")
centered = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_i0b81")
animation = &"attack"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
disable_mode = 2
collision_layer = 17
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_7bquo")

[node name="AttackRange" type="Area2D" parent="."]
position = Vector2(8, 8)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_6hkwm")

[node name="MagicTurretProjectile" type="StaticBody2D" parent="."]
collision_layer = 0

[node name="HitBox" type="Area2D" parent="MagicTurretProjectile"]
disable_mode = 2
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D3" type="CollisionShape2D" parent="MagicTurretProjectile/HitBox"]
shape = SubResource("CircleShape2D_gmgm6")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="MagicTurretProjectile"]
shape = SubResource("CircleShape2D_f5okr")

[node name="Sprite2D" type="Sprite2D" parent="MagicTurretProjectile"]
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_my2gs")

[node name="HitBox" type="Area2D" parent="."]
disable_mode = 2
collision_layer = 16
collision_mask = 16
monitoring = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_1xknk")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0gq88")
bus = &"Sfx"

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="MagicTurretProjectile/HitBox" to="." method="_on_projectile_body_entered"]
